Add images/ add image and instruction to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,24 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg" alt="Lasagna, a cat's best friend" width = 320>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>A willing cat</li>
+            <li>Orange spray paint</li>
+            <li>Black spray paint</li>
+            <li>Pre-made frozen lasagna</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Locate a cat and place it in the bathroom.</li>
+            <li>Follow the directions on the box of frozen lasagna.</li>
+            <li>Spray paint the cat orange.</li>
+            <li>Spray paint black stripes on the cat to match the above photo.</li>
+            <li>Place cat next to cooked lasagna.</li>
+        </ol>
+        <ul>
+            <li>MAY NOT WORK ON MONDAYS</li>
+        </ul>
     </body>
 </html>
